--- a/custom/views/report_tree_ventas.xml
+++ b/custom/views/report_tree_ventas.xml
@@ -40,5 +40,24 @@
         </tree>
       </field>
     </record>
+
+    <!-- acciones -->
+    <record model="ir.actions.act_window" id="custom_insoltecsa.log_action_window">
+      <field name="name">Reporte de ventas</field>
+      <field name="res_model">custom_insoltecsa.vista_ventas</field>
+      <field name="view_mode">tree</field>
+      <field name="view_type">tree</field>
+    </record>
+
+    <!-- menu root -->
+    <menuitem name="rep.ventas" 
+              id="sale.sale_report_id" 
+              parent="sale.sale_menu_root"
+              sequence="1"
+              action="custom_insoltecsa.log_action_window"/>
+    <!-- menu item -->
+    
+  
+
   </data>
 </odoo>
